# VendingMachine

./: CMakeLists.txt  README.md  VendingMachine.cpp  VendingMachine.h  chocolate.cpp  chocolate.h  coin.cpp  coin.h  events.cpp  events.h  main.cpp  main.h  menu.cpp  menu.h  simulation.cpp  simulation.h
